[package]
name = "hotwire-turbo-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", default-features = false, features = [] }

[dev-dependencies]
hyper = "0.14"
tokio = { version = "1", features = ["macros", "rt", "test-util"] }
tower = { version = "0.4", features = ["util"] }